Specify documentation except for listed languages.
With the commands `\~` and `\~LanguageId` it is possible to specify comments for one or all languages.
When one wants to write the documentation for the languages except for some specified this needs a complete set of commands, with this enhancement this can be done with one command.

--- a/doc/commands.dox
+++ b/doc/commands.dox
@@ -4099,18 +4099,20 @@ class Receiver
   because doxygen uses it to detect Javadoc commands.
 
 <hr>
-\section cmdtilde \\~[LanguageId]
+\section cmdtilde \\~[LanguageId] or \\~'{'LanguageId [,LanguageId]*'}'
   \addindex \\~
   This command enables/disables a language specific filter. This can be
   used to put documentation for different language into one comment block
   and use the \ref cfg_output_language "OUTPUT_LANGUAGE" tag to filter out only a specific language.
-  Use \c \\~language_id to enable output for a specific language only and
+  Use \c \\~language_id to enable output for a specific language only,
+  \c \\~{LanguageId's} to enable output for all languages except for the ones specified in the options list and
   \c \\~ to enable output for all languages (this is also the default mode).
 
   Example:
 \verbatim
 /*! \~english This is English \~dutch Dit is Nederlands \~german Dies ist
-    Deutsch. \~ output for all languages.
+    Deutsch. \~{english, dutch, german} output for all languages but English, Dutch and German
+    \~ output for all languages.
  */
 \endverbatim
 
