--- a/doc/commands.dox
+++ b/doc/commands.dox
@@ -2056,7 +2056,7 @@ ALIASES  = "english=\if english" \
   \endlatexonly
 
 <hr>
-\section cmdparam \\param [\<dir\>] <parameter-name> { parameter description }
+\section cmdparam \\param[\<dir\>] <parameter-name> { parameter description }
 
   \addindex \\param
   Starts a parameter description for a function parameter with name
@@ -2067,17 +2067,17 @@ ALIASES  = "english=\if english" \
 
   The \c \\param command has an optional attribute, \<dir\>, specifying the direction
   of the parameter. Possible values are "[in]", "[in,out]", and "[out]",
-  note the [square] brackets in this description. Note that the space between the command
-  and the \<dir\> is optional.
+  note the [square] brackets in this description. Note that it is plso ossible to have
+  whitespace between the command and the \<dir\>.
   When a parameter is both input and output, [in,out] is used as attribute.
   Here is an example for the function \c memcpy:
   \code
 /*!
  * Copies bytes from a source memory area to a destination memory area,
  * where both areas may not overlap.
- * @param [out] dest The memory area to copy to.
- * @param [in]  src  The memory area to copy from.
- * @param [in]  n    The number of bytes to copy
+ * @param[out] dest The memory area to copy to.
+ * @param[in]  src  The memory area to copy from.
+ * @param[in]  n    The number of bytes to copy
  */
 void memcpy(void *dest, const void *src, size_t n);
   \endcode
