--- a/doc/commands.dox
+++ b/doc/commands.dox
@@ -2067,7 +2067,7 @@ ALIASES  = "english=\if english" \
 
   The \c \\param command has an optional attribute, \<dir\>, specifying the direction
   of the parameter. Possible values are "[in]", "[in,out]", and "[out]",
-  note the [square] brackets in this description. Note that it is plso ossible to have
+  note the [square] brackets in this description. Note that it is also possible to put
   whitespace between the command and the \<dir\>.
   When a parameter is both input and output, [in,out] is used as attribute.
   Here is an example for the function \c memcpy:
