--- a/doc/features.dox
+++ b/doc/features.dox
@@ -34,7 +34,7 @@
     structs, unions, templates, variables, functions, typedefs, enums and 
     defines. 
 <li>Javadoc (1.1), qdoc3 (partially), and ECMA-334 (C# spec.) compatible.
-<li>Comes with a GUI frontend (Doxywizard) to ease editing the options and 
+<li>Comes with a GUI frontend (doxywizard) to ease editing the options and 
     run doxygen. The GUI is available on Windows, Linux, and MacOSX.
 <li>Automatically generates class and collaboration diagrams in HTML (as clickable 
     image maps) and \LaTeX (as Encapsulated PostScript images).
